fixes about on mobile view

--- a/src/publications/ee/publication.scss
+++ b/src/publications/ee/publication.scss
@@ -224,7 +224,7 @@ header{
             span{
                 font-size: 16px !important;
                 &::after {
-                    left: 70px !important;
+                    left: 80px !important;
                 }    
             }
         }
